feat[navbar]: resposive navbar

--- a/index.html
+++ b/index.html
@@ -4,10 +4,44 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <title>Wolulas</title>
   </head>
   <body>
-    <h1>Wolulas coffee | Dana</h1>
+    <header>
+      <nav class="nav container">
+        <a href="#" class="nav__logo">Wolulas <span>coffee</span></a>
+        <div class="nav__menu" id="nav-menu">
+          <ul class="nav__links">
+            <li class="nav__item">
+              <a href="#menu" class="nav__link">Menu</a>
+            </li>
+            <li class="nav__item">
+              <a href="#lokasi-store" class="nav__link">Lokasi Store</a>
+            </li>
+            <li class="nav__item">
+              <a href="#tentang-kami" class="nav__link">Tentang Kami</a>
+            </li>
+            <li class="nav__item">
+              <a href="#hubungi-kami" class="nav__link">Hubungi Kami</a>
+            </li>
+          </ul>
+
+          <div class="nav__close" id="nav-close">
+            <i class="ri-close-fill"></i>
+          </div>
+        </div>
+
+        <div class="nav__toggle" id="nav-toggle">
+          <i class="ri-menu-fill"></i>
+        </div>
+      </nav>
+    </header>
+
+    <script src="js/script.js"></script>
   </body>
 </html>
