feat[about]: responsive about section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,19 @@
           </div>
         </div>
       </section>
-      <section class="container">
+      <section class="about">
+        <div class="about__container">
+          <img src="https://images.unsplash.com/photo-1522120331923-bd99e51eb26e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3687&q=80" alt="coffee-shop">
+        </div>
+        <div class="about__content">
+          <h1>Tentang Kami</h1>
+          <p>Coffee Shop kami adalah tempat yang hangat dan nyaman bagi para pencinta kopi, di mana kami menyajikan beragam kopi berkualitas tinggi dengan cinta dan keahlian. Dengan dekorasi yang ramah dan suasana yang menyambut, kami mengundang Anda untuk bersantai, bekerja, atau berbincang dengan teman dalam lingkungan yang bersahabat. Kami berkomitmen untuk memberikan pengalaman kopi yang tak terlupakan dan menjadi bagian yang aktif dalam komunitas lokal kami.</p>
+          <br>
+          <p>Selain kopi berkualitas tinggi, kami juga menawarkan berbagai pilihan minuman non-kopi, dan makanan ringan yang lezat untuk memuaskan semua selera Anda. Kami sangat bangga menjadi bagian dari komunitas lokal kami dan aktif terlibat dalam berbagai kegiatan komunitas serta mendukung inisiatif berkelanjutan. Di Coffee Shop kami, kami berharap dapat menciptakan hubungan yang erat dengan pelanggan kami dan memberikan pengalaman yang tak terlupakan, baik itu dalam bentuk pertemuan tak terduga atau momen santai bersama teman-teman. Terima kasih atas dukungan Anda dan selamat datang di Coffee Shop kami!
+          </p>
+        </div>
+      </section>
+      <section class="container menu">
         <h1 class="menu__title">Our Menu's</h1>
         <div class="menu__container">
           <div class="menu__lists">
