feat[store]: responsive store section

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__links">
             <li class="nav__item">
-              <a href="#tentang-kami" class="nav__link">Tentang Kami</a>
+              <a href="#about" class="nav__link">About</a>
             </li>
             <li class="nav__item">
-              <a href="#lokasi-store" class="nav__link">Lokasi Store</a>
+              <a href="#store" class="nav__link">Store</a>
             </li>
             <li class="nav__item">
               <a href="#menu" class="nav__link">Menu</a>
             </li>
             <li class="nav__item">
-              <a href="#hubungi-kami" class="nav__link">Hubungi Kami</a>
+              <a href="#contactus" class="nav__link">Contact Us</a>
             </li>
           </ul>
           <div class="nav__close" id="nav-close">
@@ -54,20 +54,105 @@
           </div>
         </div>
       </section>
-      <section class="about">
+      <section class="about" id="about">
         <div class="about__container">
           <img src="https://images.unsplash.com/photo-1522120331923-bd99e51eb26e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3687&q=80" alt="coffee-shop">
         </div>
         <div class="about__content">
-          <h1>Tentang Kami</h1>
+          <h1 class="title">About</h1>
           <p>Coffee Shop kami adalah tempat yang hangat dan nyaman bagi para pencinta kopi, di mana kami menyajikan beragam kopi berkualitas tinggi dengan cinta dan keahlian. Dengan dekorasi yang ramah dan suasana yang menyambut, kami mengundang Anda untuk bersantai, bekerja, atau berbincang dengan teman dalam lingkungan yang bersahabat. Kami berkomitmen untuk memberikan pengalaman kopi yang tak terlupakan dan menjadi bagian yang aktif dalam komunitas lokal kami.</p>
           <br>
           <p>Selain kopi berkualitas tinggi, kami juga menawarkan berbagai pilihan minuman non-kopi, dan makanan ringan yang lezat untuk memuaskan semua selera Anda. Kami sangat bangga menjadi bagian dari komunitas lokal kami dan aktif terlibat dalam berbagai kegiatan komunitas serta mendukung inisiatif berkelanjutan. Di Coffee Shop kami, kami berharap dapat menciptakan hubungan yang erat dengan pelanggan kami dan memberikan pengalaman yang tak terlupakan, baik itu dalam bentuk pertemuan tak terduga atau momen santai bersama teman-teman. Terima kasih atas dukungan Anda dan selamat datang di Coffee Shop kami!
           </p>
         </div>
       </section>
-      <section class="container menu">
-        <h1 class="menu__title">Our Menu's</h1>
+      <section class="container store" id="store">
+        <h1 class="title">Our Store</h1>
+        <div class="store__container">
+          <div class="card border">
+            <div class="card__img">
+              <img src="https://images.unsplash.com/photo-1544031064-9de80864ade5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjN8fGNhZmUlMjBzaG9wfGVufDB8fDB8fHww&auto=format&fit=crop&w=800&q=60" alt="coffee-shop">
+            </div>
+            <div class="card__content">
+              <h2>Benowo</h2>
+              <div class="store__content">
+                <i class="ri-map-pin-2-fill icon"></i>
+                <div>
+                  <p>Wolulas coffee - Pondok Indah No. 23, Kec. Pakal, Kel. Sememi, Kota Surabaya, Jawa Timur, 60019.</p>
+
+                  <p>See on Google Maps</p>
+                </div>
+              </div>
+              <div class="store__content">
+                <i class="ri-time-fill icon"></i>
+                <span>10:00 - 21:00</span>
+              </div>
+            </div>
+          </div>
+          <div class="card border">
+            <div class="card__img">
+              <img src="https://images.unsplash.com/photo-1615104726478-805edaed3109?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzF8fGNhZmUlMjBzaG9wfGVufDB8fDB8fHww&auto=format&fit=crop&w=800&q=60" alt="coffee-shop">
+            </div>
+            <div class="card__content">
+              <h2>Gubeng</h2>
+              <div class="store__content">
+                <i class="ri-map-pin-2-fill icon"></i>
+                <div>
+                  <p>Wolulas coffee - Ahmad Yani No. 09, Kec. Wonokromo, Kel. Panjang Jiwo, Kota Surabaya, Jawa Timur, 60119.</p>
+
+                  <p>See on Google Maps</p>
+                </div>
+              </div>
+              <div class="store__content">
+                <i class="ri-time-fill icon"></i>
+                <span>10:00 - 21:00</span>
+              </div>
+            </div>
+          </div>
+          <div class="card border">
+            <div class="card__img">
+              <img src="https://images.unsplash.com/photo-1493857671505-72967e2e2760?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTExfHxjYWZlJTIwc2hvcHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=800&q=60" alt="coffee-shop">
+            </div>
+            <div class="card__content">
+              <h2>Gresik Kota Baru</h2>
+              <div class="store__content">
+                <i class="ri-map-pin-2-fill icon"></i>
+                <div>
+                  <p>Wolulas coffee - Panglima Sudirman No. 58, Kec. Randuagung, Kel. Kebomas, Kota Gresik, Jawa Timur, 61129.</p>
+
+                  <p>See on Google Maps</p>
+                </div>
+              </div>
+              <div class="store__content">
+                <i class="ri-time-fill icon"></i>
+                <span>10:00 - 21:00</span>
+              </div>
+            </div>
+          </div>
+            <div class="card border">
+              <div class="card__img">
+                <img src="https://images.unsplash.com/photo-1518288319310-99bc48891084?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTM5fHxjYWZlJTIwc2hvcHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=800&q=60" alt="coffee-shop">
+              </div>
+              <div class="card__content">
+                <h2>Senayan City</h2>
+                <div class="store__content">
+                  <i class="ri-map-pin-2-fill icon"></i>
+                  <div>
+                    <p>Wolulas coffee - Jalan Kenangan Indah No. 123, Kec. Kebayoran Baru, Kel. Gunung, Kota Jakarta Selatan, DKI Jakarta, 539019.</p>
+  
+                    <p>See on Google Maps</p>
+                  </div>
+                </div>
+                <div class="store__content">
+                  <i class="ri-time-fill icon"></i>
+                  <span>10:00 - 21:00</span>
+                </div>
+              </div>
+            </div>
+        </div>
+      </section>
+      <section class="container menu" id="menu">
+        <h1 class="title">Our Menu</h1>
         <div class="menu__container">
           <div class="menu__lists">
             <ul>
