feat[blog]: add blog section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header id="header">
       <nav class="nav container">
         <a href="#" class="nav__logo">Wolulas <span>coffee</span></a>
-        <div class="nav__menu" id="nav-menu">
+        <aside class="nav__menu" id="nav-menu">
           <ul class="nav__links">
             <li class="nav__item">
               <a href="#about" class="nav__link">About</a>
@@ -28,13 +28,16 @@
               <a href="#menu" class="nav__link">Menu</a>
             </li>
             <li class="nav__item">
+              <a href="#blog" class="nav__link">Blog</a>
+            </li>
+            <li class="nav__item">
               <a href="#contactus" class="nav__link">Contact Us</a>
             </li>
           </ul>
           <div class="nav__close" id="nav-close">
             <i class="ri-close-fill"></i>
           </div>
-        </div>
+        </aside>
         <div class="nav__toggle" id="nav-toggle">
           <i class="ri-menu-fill"></i>
         </div>
@@ -201,7 +204,7 @@
       </section>
       <section class="container menu" id="menu">
         <h1 class="title">Our Menu</h1>
-        <div class="menu__container">
+        <aside class="menu__container">
           <div class="menu__lists">
             <ul>
               <li class="menu__item">
@@ -227,7 +230,10 @@
             </ul>
           </div>
           <div class="menu__content" id="content"></div>
-        </div>
+        </aside>
+      </section>
+      <section class="container blog" id="blog">
+        <h1>Blog</h1>
       </section>
       <section class="container contact" id="contactus">
         <h1 class="title">Contact Us</h1>
