feat[blog]: blog section done

--- a/index.html
+++ b/index.html
@@ -232,8 +232,39 @@
           <div class="menu__content" id="content"></div>
         </aside>
       </section>
-      <section class="container blog" id="blog">
-        <h1>Blog</h1>
+      <section class="blog" id="blog">
+        <div class="container blog__content">
+          <h1 class="title">Our News</h1>
+          <p>
+            Get the latest updates and deeper coffee experience form Wolulas
+            Coffee
+          </p>
+          <article>
+            <img
+              src="https://images.unsplash.com/photo-1580866490076-7f49e396e4de?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3474&q=80"
+              alt="store"
+            />
+            <div class="blog__detail">
+              <h1>Coffee Meditation Will Get You Through the Darkest Days</h1>
+              <span>5 Min - Oct 12, 2023</span>
+              <p>
+                The reason why most of us practice meditation is that it helps
+                us to find inner peace, improves perception, helps brain to
+                rest, helps us to stay in the present moment and most of all
+                perfects our sense of contentment as a whole. There is plenty of
+                research about the positive effects of mediation towards
+                comprehensive well-being of people. Researches show that
+                meditation helps people to concentrate on the present moment and
+                prevents dilution of thoughts. Dilution of thoughts had negative
+                effect on learning new and fulfilling tasks.
+              </p>
+            </div>
+            <div class="read-more">
+              <i class="ri-loader-2-line icon"></i>
+              <p>read more</p>
+            </div>
+          </article>
+        </div>
       </section>
       <section class="container contact" id="contactus">
         <h1 class="title">Contact Us</h1>
