feat[footer]: dummy data

--- a/index.html
+++ b/index.html
@@ -322,10 +322,10 @@
             <div class="left__content">
               <i class="ri-map-pin-fill icon"></i>
               <div>
-                <p>Graha Ganesha</p>
+                <p>Graha Arjuna Indah</p>
                 <p>
-                  Lantai 1 Suite 120 & 130 Jl. Hayam Wuruk No.28, Kelurahan
-                  Kebon Klapa Kecamatan Gambir, Jakarta Pusat, DKI Jakarta
+                  Lantai 99 Jl. Pondok Benowo No.107, Kec. Penataran, Kelurahan
+                  Pakal, Surabaya, Jawa Timur, 601198
                 </p>
               </div>
             </div>
@@ -347,7 +347,7 @@
               Address: Gedung V Lantai 99 Pondok Benowo Indah No. 16 Surabaya
               02769
             </p>
-            <p>Whatsapp Diktjen PKTN: 0853-1111-1010</p>
+            <p>Whatsapp Diktjen PKTN: 1123-1011-2100</p>
           </div>
         </div>
         <div class="copyright">
