feat[biodata]: add biodata section

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
       </section>
       <section class="container menu" id="menu">
         <h1 class="title">Our Menu</h1>
-        <aside class="menu__container">
+        <div class="menu__container">
           <div class="menu__lists">
             <ul>
               <li class="menu__item">
@@ -230,7 +230,7 @@
             </ul>
           </div>
           <div class="menu__content" id="content"></div>
-        </aside>
+        </div>
       </section>
       <section class="blog" id="blog">
         <div class="container blog__content">
@@ -314,47 +314,82 @@
           </div>
         </div>
       </section>
-      <footer>
-        <div class="footer container">
-          <h1>Wolulas <span>coffee</span></h1>
-          <div class="left">
-            <h2>Customer Center</h2>
-            <div class="left__content">
-              <i class="ri-map-pin-fill icon"></i>
+      <aside class="container">
+        <h1 class="title">Biodata</h1>
+        <div class="biodata">
+          <img
+            src="https://dicoding-web-img.sgp1.digitaloceanspaces.com/small/avatar/dos:cf3490cf8ee975d432232e0bd1548c2020231012233928.png"
+            alt="dana"
+          />
+          <div class="biodata__detail">
+            <div class="data">
+              <label>Nama Lengkap:</label>
               <div>
-                <p>Graha Arjuna Indah</p>
-                <p>
-                  Lantai 99 Jl. Pondok Benowo No.107, Kec. Penataran, Kelurahan
-                  Pakal, Surabaya, Jawa Timur, 601198
-                </p>
+                <p>M. Harliansyah Wardana</p>
               </div>
             </div>
-            <div class="left__content">
-              <i class="ri-whatsapp-fill icon"></i>
+            <div class="data">
+              <label>Alamat:</label>
               <div>
-                <p>082444000123</p>
+                <p>Tambakdono, Surabaya</p>
+              </div>
+            </div>
+            <div class="data">
+              <label>Username:</label>
+              <div>
+                <p>dana_harley</p>
+              </div>
+            </div>
+            <div class="data">
+              <label>Email:</label>
+              <div>
+                <p>danaharley00@gmail.com</p>
               </div>
             </div>
           </div>
-          <div class="right">
-            <h2>Consumer Complaints Service Contact Information</h2>
-            <p>
-              Consumer Complaints Service Contact Information Directorate
-              General of Consumer Protection and Trade Compliance,
-            </p>
-            <p>Ministry of Trade of the Republic of Indonesia</p>
-            <p>
-              Address: Gedung V Lantai 99 Pondok Benowo Indah No. 16 Surabaya
-              02769
-            </p>
-            <p>Whatsapp Diktjen PKTN: 1123-1011-2100</p>
-          </div>
         </div>
-        <div class="copyright">
-          <p class="container">&copy;2023 WOLULAS COFFEE, All Right Reserved</p>
-        </div>
-      </footer>
+      </aside>
     </main>
+    <footer>
+      <div class="footer container">
+        <h1>Wolulas <span>coffee</span></h1>
+        <div class="left">
+          <h2>Customer Center</h2>
+          <div class="left__content">
+            <i class="ri-map-pin-fill icon"></i>
+            <div>
+              <p>Graha Arjuna Indah</p>
+              <p>
+                Lantai 99 Jl. Pondok Benowo No.107, Kec. Penataran, Kelurahan
+                Pakal, Surabaya, Jawa Timur, 601198
+              </p>
+            </div>
+          </div>
+          <div class="left__content">
+            <i class="ri-whatsapp-fill icon"></i>
+            <div>
+              <p>082444000123</p>
+            </div>
+          </div>
+        </div>
+        <div class="right">
+          <h2>Consumer Complaints Service Contact Information</h2>
+          <p>
+            Consumer Complaints Service Contact Information Directorate General
+            of Consumer Protection and Trade Compliance,
+          </p>
+          <p>Ministry of Trade of the Republic of Indonesia</p>
+          <p>
+            Address: Gedung V Lantai 99 Pondok Benowo Indah No. 16 Surabaya
+            02769
+          </p>
+          <p>Whatsapp Diktjen PKTN: 1123-1011-2100</p>
+        </div>
+      </div>
+      <div class="copyright">
+        <p class="container">&copy;2023 WOLULAS COFFEE, All Right Reserved</p>
+      </div>
+    </footer>
     <script src="js/script.js"></script>
   </body>
 </html>
